overflow fix2

--- a/src/index.css
+++ b/src/index.css
@@ -128,7 +128,7 @@ button:hover {
 }
 @media (max-width: 28em) {
   .container {
-    margin-top: -16px;
+    margin-top: -36px;
   }
   .counter-header {
     font-size: 2.5em;
